--- a/summary/src/main/resources/application.yml
+++ b/summary/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     neo4j:
       username: neo4j
       password: 2217291861
-      uri: http://localhost:7474123
+      uri: http://localhost:7474
   http:
     encoding:
       force: true
